@@ -136,6 +136,9 @@ o added timestamp in installation logs
 75. smtpd.c: Use last line to set error message from error strings returned by
     qmail_close()
 76. surblfilter.c: display the SURBL blocked uri in message
+- 08/09/2023
+77. qfrontend: make libexecdir, controldir configurable using env variables
+78. qmail-qfilter: BUG FIX: qmail-multi, qmail-queue wasn't getting executed
 
 * Sun Apr 23 2023 17:51:54 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.3-1.1%{?dist}
 Release 3.0.3-1.1 Start 01/02/2023 End 23/04/2023
